--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div class="container">
     <h1>My To-Do List</h1>
     <input type="text" id="task-input" placeholder="Add a new task...">
+    <input type="date" id="due-date-input">
     <button id="add-task-btn">Add Task</button>
     <ul id="task-list"></ul>
   </div>
